Implement requested changes